# roscpp_extension_lib

./: README.md
node_param_loader/: CMakeLists.txt  package.xml
node_param_loader/include/node_param_loader/: node_param_loader.h
node_param_loader/src/: node_param_loader.cpp
roscpp_extension_lib/: CMakeLists.txt  package.xml
transform_lib/: CMakeLists.txt  package.xml
transform_lib/include/transform_lib/: eigen_transform.h  eigen_transform_conversions.h  nan_check.h  quaternion_conversions.h  transform_functions.h
transform_lib/src/transform_lib/: eigen_transform_conversions.cpp  nan_check.cpp  quaternion_conversions.cpp  transform_functions.cpp
